--- a/_talks/2024-04-15-talk-4.md
+++ b/_talks/2024-04-15-talk-4.md
@@ -7,3 +7,5 @@ venue: "Energy Norway 2024"
 date: 2024-04-15
 location: "Stavanger, Norway"
 ---
+
+[More information here](/files/EnergyNorway2024_JUNGWON_SEO.pdf)
