--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -41,9 +41,12 @@
      "output_type": "stream",
      "text": [
       "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\tslides_url\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\thttp://academicpages.github.io/files/slides1.pdf\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\thttp://academicpages.github.io/files/slides2.pdf\n",
-      "2015-10-01\tPaper Title Number 3\tJournal 1\tThis paper is about the number 3. The number 4 is left for future work.\tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://academicpages.github.io/files/paper3.pdf\thttp://academicpages.github.io/files/slides3.pdf"
+      "2023-12-04\tFlexible and secure code deployment in federated learning using large language models: Prompt engineering to enhance malicious code detection\t2023 IEEE International Conference on Cloud Computing Technology and Science (CloudCom)\t\tSeo, Jungwon, Nan Zhang, and Chunming Rong. \"Flexible and secure code deployment in federated learning using large language models: Prompt engineering to enhance malicious code detection.\" In 2023 IEEE International Conference on Cloud Computing Technology and Science (CloudCom), pp. 341-349. IEEE, 2023.\tseo2023flexible\thttps://ieeexplore.ieee.org/abstract/document/10475813\t\n",
+      "2024-06-10\tFederated AI Chat System: Tackling Tacit Knowledge Management\t85th EAGE Annual Conference & Exhibition (including the Workshop Programme)\t\tSeo, J., B. Cui, and C. Rong. \"Federated AI Chat System: Tackling Tacit Knowledge Management.\" In 85th EAGE Annual Conference & Exhibition (including the Workshop Programme), vol. 2024, no. 1, pp. 1-5. European Association of Geoscientists & Engineers, 2024.\n",
+      "\tseo2024federated\thttps://doi.org/10.3997/2214-4609.202410298\t\n",
+      "2024-11-24\tUnderstanding Federated Learning from IID to Non-IID dataset: An Experimental Study\t2024 Norsk IKT-Konferanse for Forskning Og Utdanning\t\tSeo, Jungwon, Ferhat Ozgur Catak, and Chunming Rong. \"Understanding Federated Learning from IID to Non-IID dataset: An Experimental Study.\" In Norsk IKT-konferanse for forskning og utdanning, no. 1. 2024.\tseo2025understanding\thttps://arxiv.org/abs/2502.00182\t\n",
+      "2024-12-13\tProxyLLM: LLM-Driven Framework for Customer Support Through Text-Style Transfer\tECMLPKDD 2025 (accepted)\t\tJo, Sehyeong, and Jungwon Seo. \"ProxyLLM: LLM-Driven Framework for Customer Support Through Text-Style Transfer.\" arXiv preprint arXiv:2412.09916 (2024).\tjo2024proxyllm\thttps://arxiv.org/abs/2412.09916\t\n",
+      "2025-03-21\tFederated Large Domain Model System\tBlockchain: Research and Applications\t\tRong, Chunming, Jungwon Seo, Zihan Zhao, Ferhat Ozgur Catak, Jiahui Geng, and Martin Gilje Jaatun. “Federated Large Domain Model System.” Blockchain: Research and Applications 6, no. 3 (2025): 100277. https://doi.org/10.1016/j.bcra.2025.100277.\tRONG2025100277\thttps://doi.org/10.1016/j.bcra.2025.100277\t"
      ]
     }
    ],
@@ -62,7 +65,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pytz in /Users/jungwons/.pyenv/versions/3.9.4/lib/python3.9/site-packages (2023.3)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pytz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -86,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -127,69 +150,94 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2009-10-01</td>\n",
-       "      <td>Paper Title Number 1</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 1. The number 2...</td>\n",
-       "      <td>Your Name, You. (2009). \"Paper Title Number 1....</td>\n",
-       "      <td>paper-title-number-1</td>\n",
-       "      <td>http://academicpages.github.io/files/paper1.pdf</td>\n",
-       "      <td>http://academicpages.github.io/files/slides1.pdf</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>Flexible and secure code deployment in federat...</td>\n",
+       "      <td>2023 IEEE International Conference on Cloud Co...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Seo, Jungwon, Nan Zhang, and Chunming Rong. \"F...</td>\n",
+       "      <td>seo2023flexible</td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>Paper Title Number 2</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 2. The number 3...</td>\n",
-       "      <td>Your Name, You. (2010). \"Paper Title Number 2....</td>\n",
-       "      <td>paper-title-number-2</td>\n",
-       "      <td>http://academicpages.github.io/files/paper2.pdf</td>\n",
-       "      <td>http://academicpages.github.io/files/slides2.pdf</td>\n",
+       "      <td>2024-06-10</td>\n",
+       "      <td>Federated AI Chat System: Tackling Tacit Knowl...</td>\n",
+       "      <td>85th EAGE Annual Conference &amp; Exhibition (incl...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Seo, J., B. Cui, and C. Rong. \"Federated AI Ch...</td>\n",
+       "      <td>seo2024federated</td>\n",
+       "      <td>https://doi.org/10.3997/2214-4609.202410298</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>Paper Title Number 3</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 3. The number 4...</td>\n",
-       "      <td>Your Name, You. (2015). \"Paper Title Number 3....</td>\n",
-       "      <td>paper-title-number-3</td>\n",
-       "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
-       "      <td>http://academicpages.github.io/files/slides3.pdf</td>\n",
+       "      <td>2024-11-24</td>\n",
+       "      <td>Understanding Federated Learning from IID to N...</td>\n",
+       "      <td>2024 Norsk IKT-Konferanse for Forskning Og Utd...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Seo, Jungwon, Ferhat Ozgur Catak, and Chunming...</td>\n",
+       "      <td>seo2025understanding</td>\n",
+       "      <td>https://arxiv.org/abs/2502.00182</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-12-13</td>\n",
+       "      <td>ProxyLLM: LLM-Driven Framework for Customer Su...</td>\n",
+       "      <td>ECMLPKDD 2025 (accepted)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jo, Sehyeong, and Jungwon Seo. \"ProxyLLM: LLM-...</td>\n",
+       "      <td>jo2024proxyllm</td>\n",
+       "      <td>https://arxiv.org/abs/2412.09916</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-03-21</td>\n",
+       "      <td>Federated Large Domain Model System</td>\n",
+       "      <td>Blockchain: Research and Applications</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rong, Chunming, Jungwon Seo, Zihan Zhao, Ferha...</td>\n",
+       "      <td>RONG2025100277</td>\n",
+       "      <td>https://doi.org/10.1016/j.bcra.2025.100277</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pub_date                 title      venue  \\\n",
-       "0  2009-10-01  Paper Title Number 1  Journal 1   \n",
-       "1  2010-10-01  Paper Title Number 2  Journal 1   \n",
-       "2  2015-10-01  Paper Title Number 3  Journal 1   \n",
+       "     pub_date                                              title  \\\n",
+       "0  2023-12-04  Flexible and secure code deployment in federat...   \n",
+       "1  2024-06-10  Federated AI Chat System: Tackling Tacit Knowl...   \n",
+       "2  2024-11-24  Understanding Federated Learning from IID to N...   \n",
+       "3  2024-12-13  ProxyLLM: LLM-Driven Framework for Customer Su...   \n",
+       "4  2025-03-21                Federated Large Domain Model System   \n",
        "\n",
-       "                                             excerpt  \\\n",
-       "0  This paper is about the number 1. The number 2...   \n",
-       "1  This paper is about the number 2. The number 3...   \n",
-       "2  This paper is about the number 3. The number 4...   \n",
+       "                                               venue  excerpt  \\\n",
+       "0  2023 IEEE International Conference on Cloud Co...      NaN   \n",
+       "1  85th EAGE Annual Conference & Exhibition (incl...      NaN   \n",
+       "2  2024 Norsk IKT-Konferanse for Forskning Og Utd...      NaN   \n",
+       "3                           ECMLPKDD 2025 (accepted)      NaN   \n",
+       "4              Blockchain: Research and Applications      NaN   \n",
        "\n",
        "                                            citation              url_slug  \\\n",
-       "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
-       "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
-       "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
+       "0  Seo, Jungwon, Nan Zhang, and Chunming Rong. \"F...       seo2023flexible   \n",
+       "1  Seo, J., B. Cui, and C. Rong. \"Federated AI Ch...      seo2024federated   \n",
+       "2  Seo, Jungwon, Ferhat Ozgur Catak, and Chunming...  seo2025understanding   \n",
+       "3  Jo, Sehyeong, and Jungwon Seo. \"ProxyLLM: LLM-...        jo2024proxyllm   \n",
+       "4  Rong, Chunming, Jungwon Seo, Zihan Zhao, Ferha...        RONG2025100277   \n",
        "\n",
-       "                                         paper_url  \\\n",
-       "0  http://academicpages.github.io/files/paper1.pdf   \n",
-       "1  http://academicpages.github.io/files/paper2.pdf   \n",
-       "2  http://academicpages.github.io/files/paper3.pdf   \n",
-       "\n",
-       "                                         slides_url  \n",
-       "0  http://academicpages.github.io/files/slides1.pdf  \n",
-       "1  http://academicpages.github.io/files/slides2.pdf  \n",
-       "2  http://academicpages.github.io/files/slides3.pdf  "
+       "                                           paper_url  slides_url  \n",
+       "0  https://ieeexplore.ieee.org/abstract/document/...         NaN  \n",
+       "1        https://doi.org/10.3997/2214-4609.202410298         NaN  \n",
+       "2                   https://arxiv.org/abs/2502.00182         NaN  \n",
+       "3                   https://arxiv.org/abs/2412.09916         NaN  \n",
+       "4         https://doi.org/10.1016/j.bcra.2025.100277         NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -240,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -308,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -319,8 +367,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md  2015-10-01-paper-title-number-3.md\n",
-      "2010-10-01-paper-title-number-2.md  2024-02-17-paper-title-number-4.md\n"
+      "2023-12-04-prompt-engineering-malicious-code-detection.md\n",
+      "2023-12-04-seo2023flexible.md\n",
+      "2024-02-17-paper-title-number-4.md\n",
+      "2024-06-10-seo2024federated.md\n",
+      "2024-11-24-seo2025understanding.md\n",
+      "2024-12-13-jo2024proxyllm.md\n",
+      "2025-03-21-RONG2025100277.md\n",
+      "2025-06-08-paper-title-number-5.md\n"
      ]
     }
    ],
@@ -380,7 +434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.9.4",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
