--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -56,11 +56,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field."
+      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\n",
+      "Building Federated Knowledge Cloud with Tokenized Digital Assets and Smart Contracts across Consortium\tTalk\ttalk-1\tEnergy Norway 2023\t2023-03-15\tStavanger, Norway\t\tTBD\n",
+      "A better way to share data\tTalk\ttalk-2\tResearcher's breakfast\t2023-09-07\tStavanger, Norway\thttp://exampleurl.com\tTBD\n",
+      "A better way to share data\tTalk\ttalk-3\tNCS2030 Webinar\t2023-09-27\tStavanger, Norway\thttps://www.youtube.com/watch?v=M6gJdnsDoBI\tTBD\n",
+      "LLM-powered Automated Workflow Management\tTalk\ttalk-4\tEnergy Norway 2024\t2024-04-15\tStavanger, Norway\t\tTBD"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -92,6 +92,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -109,85 +122,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Talk 1 on Relevant Topic in Your Field</td>\n",
+       "      <td>Building Federated Knowledge Cloud with Tokeni...</td>\n",
        "      <td>Talk</td>\n",
        "      <td>talk-1</td>\n",
-       "      <td>UC San Francisco, Department of Testing</td>\n",
-       "      <td>2012-03-01</td>\n",
-       "      <td>San Francisco, California</td>\n",
+       "      <td>Energy Norway 2023</td>\n",
+       "      <td>2023-03-15</td>\n",
+       "      <td>Stavanger, Norway</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
+       "      <td>TBD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Tutorial 1 on Relevant Topic in Your Field</td>\n",
-       "      <td>Tutorial</td>\n",
-       "      <td>tutorial-1</td>\n",
-       "      <td>UC-Berkeley Institute for Testing Science</td>\n",
-       "      <td>2013-03-01</td>\n",
-       "      <td>Berkeley CA, USA</td>\n",
-       "      <td>http://exampleurl.com</td>\n",
-       "      <td>This is a description of your tutorial, note t...</td>\n",
+       "      <td>A better way to share data</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>talk-2</td>\n",
+       "      <td>Researcher's breakfast</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>Stavanger, Norway</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TBD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Talk 2 on Relevant Topic in Your Field</td>\n",
+       "      <td>A better way to share data</td>\n",
        "      <td>Talk</td>\n",
-       "      <td>talk-2</td>\n",
-       "      <td>London School of Testing</td>\n",
-       "      <td>2014-02-01</td>\n",
-       "      <td>London, UK</td>\n",
-       "      <td>http://example2.com</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
+       "      <td>talk-3</td>\n",
+       "      <td>NCS2030 Webinar</td>\n",
+       "      <td>2023-09-27</td>\n",
+       "      <td>Stavanger, Norway</td>\n",
+       "      <td>https://www.youtube.com/watch?v=M6gJdnsDoBI</td>\n",
+       "      <td>TBD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Conference Proceeding talk 3 on Relevant Topic...</td>\n",
-       "      <td>Conference proceedings talk</td>\n",
-       "      <td>talk-3</td>\n",
-       "      <td>Testing Institute of America 2014 Annual Confe...</td>\n",
-       "      <td>2014-03-01</td>\n",
-       "      <td>Los Angeles, CA</td>\n",
+       "      <td>LLM-powered Automated Workflow Management</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>talk-4</td>\n",
+       "      <td>Energy Norway 2024</td>\n",
+       "      <td>2024-04-15</td>\n",
+       "      <td>Stavanger, Norway</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>This is a description of your conference proce...</td>\n",
+       "      <td>TBD</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               title  \\\n",
-       "0             Talk 1 on Relevant Topic in Your Field   \n",
-       "1         Tutorial 1 on Relevant Topic in Your Field   \n",
-       "2             Talk 2 on Relevant Topic in Your Field   \n",
-       "3  Conference Proceeding talk 3 on Relevant Topic...   \n",
+       "                                               title  type url_slug  \\\n",
+       "0  Building Federated Knowledge Cloud with Tokeni...  Talk   talk-1   \n",
+       "1                         A better way to share data  Talk   talk-2   \n",
+       "2                         A better way to share data  Talk   talk-3   \n",
+       "3          LLM-powered Automated Workflow Management  Talk   talk-4   \n",
        "\n",
-       "                          type    url_slug  \\\n",
-       "0                         Talk      talk-1   \n",
-       "1                     Tutorial  tutorial-1   \n",
-       "2                         Talk      talk-2   \n",
-       "3  Conference proceedings talk      talk-3   \n",
+       "                    venue        date           location  \\\n",
+       "0      Energy Norway 2023  2023-03-15  Stavanger, Norway   \n",
+       "1  Researcher's breakfast  2023-09-07  Stavanger, Norway   \n",
+       "2         NCS2030 Webinar  2023-09-27  Stavanger, Norway   \n",
+       "3      Energy Norway 2024  2024-04-15  Stavanger, Norway   \n",
        "\n",
-       "                                               venue        date  \\\n",
-       "0            UC San Francisco, Department of Testing  2012-03-01   \n",
-       "1          UC-Berkeley Institute for Testing Science  2013-03-01   \n",
-       "2                           London School of Testing  2014-02-01   \n",
-       "3  Testing Institute of America 2014 Annual Confe...  2014-03-01   \n",
-       "\n",
-       "                    location               talk_url  \\\n",
-       "0  San Francisco, California                    NaN   \n",
-       "1           Berkeley CA, USA  http://exampleurl.com   \n",
-       "2                 London, UK    http://example2.com   \n",
-       "3            Los Angeles, CA                    NaN   \n",
-       "\n",
-       "                                         description  \n",
-       "0  This is a description of your talk, which is a...  \n",
-       "1  This is a description of your tutorial, note t...  \n",
-       "2  This is a description of your talk, which is a...  \n",
-       "3  This is a description of your conference proce...  "
+       "                                      talk_url description  \n",
+       "0                                          NaN         TBD  \n",
+       "1                                          NaN         TBD  \n",
+       "2  https://www.youtube.com/watch?v=M6gJdnsDoBI         TBD  \n",
+       "3                                          NaN         TBD  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -358,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.9.4",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
